// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageExtensionInspector show mark entry button 1`] = `
<div
  className="ant-space ant-space-vertical"
  style={Object {}}
>
  <div
    className="ant-space-item"
    style={Object {}}
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        设为入口
      </span>
    </button>
  </div>
</div>
`;

exports[`PackageExtensionInspector show nothing 1`] = `null`;

exports[`PackageExtensionInspector show unmark entry button 1`] = `
<div
  className="ant-space ant-space-vertical"
  style={Object {}}
>
  <div
    className="ant-space-item"
    style={Object {}}
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        取消设为入口
      </span>
    </button>
  </div>
</div>
`;
